--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -49,7 +49,12 @@
     /* 1600px até 1919px */
     @media (min-width: 1600px) and (max-width: 1919px) {
       .footer a {
-        margin: 0 14px 5px;
+        margin: 10px 14px 20px;
+        font-size: 1.3rem;
+      }
+
+      .footer p{
+        font-size: 1.3rem;
       }
     }
 
