--- a/assets/css/servicos.css
+++ b/assets/css/servicos.css
@@ -36,7 +36,7 @@
   }
 
 .icon-box {
- margin-top: -60px;
+  margin-top: -60px;
   width: 48px;
   height: 48px;
   background-color: #E2B322; /* roxo padrão */
@@ -156,7 +156,7 @@
   /* === 1600px até 1919px === */
   @media screen and (min-width: 1600px) and (max-width: 1919px) {
     .tituloServicos {
-      font-size: 40px;
+      font-size: 50px;
     }
   
     #containerServicos {
@@ -168,8 +168,10 @@
     }
   
     .cardservico {
-      width: 430px;
-      height: 200px;
+      margin-top: 20px;
+      font-size: 1.3rem;
+      width: 445px;
+      height: 300px;
     }
   }
   
