--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -131,11 +131,11 @@
       margin-left: auto;
       margin-right: auto;
       text-align: center;
-      margin-bottom: -50px;
+      margin-bottom: -100px;
     }
 
     .cardPlanos {
-      margin-top: 40px;
+      margin-top: 30px;
       width: 280px;
       height: auto;
     }
@@ -174,7 +174,7 @@
   .cardPlanos {
     max-width: 420px;
     padding: 2.5rem 2rem 3rem;
-    height: 800px;
+    height: auto;
   }
 
   .titulo-premium  {
@@ -185,9 +185,6 @@
     font-size: 1.3rem;
   }
 
-  #lumenPremioBtn {
-    margin-top: 70px;
-  }
 
   #lumenIndividualBtn {
     margin-top: 70px;
