--- a/assets/css/testemunhas.css
+++ b/assets/css/testemunhas.css
@@ -127,6 +127,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    margin-bottom: -30px;
   }
 
   #containerTestemunhas {
@@ -143,6 +144,10 @@
   .btnTestemunhas {
     width: 80%;
     padding: 15px 20px;
+  }
+
+  .btnTestemunhas {
+    width: 54%;
   }
 }
 
@@ -166,7 +171,7 @@
   }
 
   .btnTestemunhas {
-    width: 80%;
+    width: 40%;
   }
 }
 
@@ -193,6 +198,36 @@
   .btnTestemunhas {
     width: 250px;
   }
+
+  .estrela {
+    font-size: 1.6rem;
+  }
+
+   .nome {
+    font-size: 1.3rem;
+  }
+
+   .cargo {
+    color: #aaa;
+    font-size: 1.3rem;
+  }
+
+  .depoimento {
+    font-style: italic;
+    font-size: 1.3rem;
+    line-height: 1.4;
+  }
+
+  .depoimento .aspas {
+    color: #E8B109;
+    font-size: 1.8rem;
+  }
+
+    .btnTestemunhas {
+    padding: 1.3rem 2.5rem;
+    font-size: 1.4rem;
+  }
+
 }
 
 
