--- a/assets/css/faqs.css
+++ b/assets/css/faqs.css
@@ -212,6 +212,39 @@
   }
 }
 
+ @media screen and (min-width: 992px) and (max-width: 1999px) {
+  .faq-item{
+    width: 85%;
+    margin: 0 auto;
+    height: auto;
+  }
+
+  .faq-title {
+    font-size: 42px;
+  }
+
+  .faq-question {
+    font-size: 1.05rem;
+    padding: 1.1rem;
+  }
+
+  .faq-answer {
+    font-size: 0.95rem;
+    padding: 0 1.3rem;
+  }
+
+   #toggle-faq-btn {
+    margin: 2rem auto;
+    display: block;
+    padding: 1rem 5rem;
+    font-size: 1.1rem;
+  }
+
+  .btnContainer-VerTodos {
+    margin-top: -10px;
+  }
+ }
+
 @media (min-width: 1200px) and (max-width: 1599px) {
   #faq-container {
     max-width: 1100px;
