--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -76,6 +76,21 @@
   }
 }
 
+ @media screen and (min-width: 992px) and (max-width: 1999px) {
+  .hero {
+    padding: 20rem 1.5rem;
+  }
+
+  .hero h1 {
+    font-size: 5rem;
+  }
+
+  .hero .subtext {
+    font-size: 1.9rem;
+    max-width: 600px;
+  }
+ }
+
 /* === 1200px até 1599px === */
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
 
