--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -191,6 +191,41 @@
   }
 }
 
+@media screen and (min-width: 992px) and (max-width: 1999px){
+   #tituloPlanos {
+    font-size: 42px;
+    margin-top: 130px;
+    margin-bottom: -40px;
+    max-width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  .cardPlanos {
+    max-width: 420px;
+    padding: 2.5rem 2rem 3rem;
+    height: auto;
+  }
+
+  .titulo-premium  {
+    font-size: 1.5rem;
+  }
+
+  .lista-premium {
+    font-size: 1.3rem;
+  }
+
+
+  #lumenIndividualBtn {
+    margin-top: 70px;
+  }
+
+  #containerPlanos {
+    gap: 80px
+  }
+}
+
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
 
 #containerPlanos {
