--- a/assets/css/semiCirculo.css
+++ b/assets/css/semiCirculo.css
@@ -117,6 +117,29 @@ svg {
   }
 }
 
+ @media screen and (min-width: 992px) and (max-width: 1999px) {
+  .halo {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 99%; 
+    max-width: none;
+    overflow: visible;
+    z-index: 1;
+  }
+
+  .halo svg {
+    width: 100%;
+    height: auto;
+  }
+
+  .halo svg path {
+    stroke-width: 5px;
+    filter: drop-shadow(0 0 18px #3CA7FF); 
+  }
+ }
+
 @media (min-width: 1200px) and (max-width: 1599px) {
 .halo {
     width: 100%;
