--- a/assets/css/servicos.css
+++ b/assets/css/servicos.css
@@ -96,34 +96,64 @@
   
 /* === 768px até 991px (Tablet) === */
 @media screen and (min-width: 768px) and (max-width: 991px) {
-      .tituloServicos {
-      font-size: 45px;
-      max-width: 500px;
-      margin: 140px auto 0;
-      text-align: center;
-    }
-
-    #containerServicos {
-      flex-direction: column; 
-      align-items: center;   
-      gap: 100px;
-    }
-  
-    .cardservico {
-      margin-top: -20px;
-      width: 80%;     
-      height: auto; 
-      padding-bottom: 50px;
-    }
-
-    .cardservico p {
-      font-size: 1.4rem;
-    }
-
-    .cardservico h3 {
-      font-size: 1.4rem;
-    }
+  .tituloServicos {
+    font-size: 45px;
+    max-width: 500px;
+    margin: 140px auto 0;
+    text-align: center;
   }
+
+  #containerServicos {
+    flex-direction: column; 
+    align-items: center;   
+    gap: 100px;
+  }
+
+  .cardservico {
+    margin-top: -20px;
+    width: 80%;     
+    height: auto; 
+    padding-bottom: 50px;
+  }
+
+  .cardservico p {
+    font-size: 1.4rem;
+  }
+
+  .cardservico h3 {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1999px){
+  .tituloServicos {
+    font-size: 45px;
+    max-width: 500px;
+    margin: 140px auto 0;
+    text-align: center;
+  }
+
+  #containerServicos {
+    flex-direction: column; 
+    align-items: center;   
+    gap: 100px;
+  }
+
+  .cardservico {
+    margin-top: -20px;
+    width: 80%;     
+    height: auto; 
+    padding-bottom: 50px;
+  }
+
+  .cardservico p {
+    font-size: 1.4rem;
+  }
+
+  .cardservico h3 {
+    font-size: 1.4rem;
+  }
+}
 
   /* === 1200px até 1599px === */
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
