--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -33,8 +33,8 @@
   position: relative;
   overflow: visible; 
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  border-left: 1px solid rgba(0, 255, 255, 0.12);
-  border-top: 1px solid rgba(0, 255, 255, 0.08);
+  border-left: 1px solid rgba(245, 221, 14, 0.12);
+  border-top: 1px solid rgba(225, 186, 12, 0.08);
 }
 
 
@@ -68,7 +68,7 @@
   margin-top: auto;
   width: 100%;
   padding: 0.9rem 0;
-  background: #4480C4;
+  background: #E8B109;
   border: none;
   border-radius: 14px;
   color: white;
@@ -76,13 +76,13 @@
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
-  box-shadow: 0 5px 25px rgba(72, 128, 196, 0.4);
+  box-shadow: 0 5px 25px rgba(248, 222, 71, 0.4);
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 .btn-premium:hover {
   transform: translateY(-2px);
-  box-shadow: 0 8px 30px rgba(72, 128, 196, 0.6);
+  box-shadow: 0 8px 30px rgba(205, 181, 59, 0.6);
 }
 
 .lista-premium li::before {
@@ -90,7 +90,7 @@
   position: absolute;
   left: 0;
   top: 0.1rem;
-  color: #4880C4; 
+  color: #E8B109; 
   font-size: 0.9rem;
   font-weight: bold;
 }
@@ -106,7 +106,7 @@
   transform: translateX(-50%);
   width: 55px;
   height: 55px;
-  background-color: #4480C4; 
+  background-color: #E8B109; 
   border-radius: 999px;
   display: flex;
   justify-content: center;
@@ -172,6 +172,7 @@
   }
 
   .cardPlanos {
+    margin-top: 50px;
     max-width: 420px;
     padding: 2.5rem 2rem 3rem;
     height: auto;
@@ -188,6 +189,10 @@
 
   #lumenIndividualBtn {
     margin-top: 70px;
+  }
+
+  #lumenGovernancaBtn {
+    margin-top: 140px;
   }
 }
 
@@ -227,78 +232,84 @@
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
-
 #containerPlanos {
-  max-width: 1000px;      
+  max-width: 1400px;      
   margin: 180px auto;         
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 100px;              
+  gap: 40px;              
   padding: 40px 20px;     
 }
 
-.cardPlanos {
-  flex: 1 1 calc(45% - 20px);  
-  max-width: 420px;
+.cardPlanos { 
+  max-width: 290px;
   padding: 2.5rem 2rem 3rem;
   height: auto;               
 }
-  .titulo-premium  {
-    font-size: 1.3rem;
-  }
 
-  .lista-premium {
-    font-size: 1.2rem;
-  }
+.titulo-premium {
+  font-size: 1.3rem;
+}
 
-  #lumenPremioBtn {
-    margin-top: 30px;
-  }
+.lista-premium {
+  font-size: 1.2rem;
+}
 
-  #lumenIndividualBtn {
-    margin-top: 30px;
-  }
+#lumenIndividualBtn {
+  margin-top: 130px;
+}
+
+ #lumenGovernancaBtn {
+  margin-top: 130px;
+}
+
+#lumenConsultorBtn {
+  margin-top: 70px;
+}
+
 }
 
 @media screen and (min-width: 1600px) and (max-width: 1919px) {
 #tituloPlanos {
   font-size: 50px
 }
-
 #containerPlanos {
-  max-width: 1500px;      
+  max-width: 1600px;      
   margin: 180px auto;         
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 100px;              
+  gap: 50px;              
   padding: 40px 20px;     
 }
 
-.cardPlanos {
-  flex: 1 1 calc(45% - 20px);  
-  max-width: 490px;
+.cardPlanos { 
+  max-width: 320px;
   padding: 2.5rem 2rem 3rem;
   height: auto;               
 }
-.titulo-premium  {
-  margin-top: 40px;
-  font-size: 1.5rem;
-}
 
-.lista-premium {
+.titulo-premium {
   font-size: 1.3rem;
 }
 
-#lumenGovernancaBtn {
-  margin-top: 30px;
+.lista-premium {
+  font-size: 1.2rem;
 }
 
-.icon-box-planos  {
-  width: 65px;
-  height: 65px;
+#lumenIndividualBtn {
+  margin-top: 130px;
 }
+
+ #lumenGovernancaBtn {
+  margin-top: 130px;
+}
+
+#lumenConsultorBtn {
+  margin-top: 70px;
+}
+
 
 }
 
@@ -307,8 +318,12 @@
       height: auto;
     }
 
+    #tituloPlanos {
+      font-size: 3.5rem;
+    }
+
     .lista-premium {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
     }
 
     .titulo-premium {
@@ -320,9 +335,17 @@
     }
 
     #lumenIndividualBtn {
-      margin-top: 70px;
+      margin-top: 130px;
+    }
+
+    #lumenConsultorBtn {
+      margin-top: 90px;
     }
     
+    #lumenGovernancaBtn {
+      margin-top: 150px;
+    }
+
     .icon-box-planos {
       width: 55px;
       height: 55px;
