--- a/assets/css/servicos.css
+++ b/assets/css/servicos.css
@@ -39,7 +39,7 @@
   margin-top: -60px;
   width: 48px;
   height: 48px;
-  background-color: #E2B322; /* roxo padrão */
+  background-color: #4480C4; 
   border-radius: 12px;
   display: flex;
   align-items: center;
@@ -50,6 +50,7 @@
   width: 24px;
   height: 24px;
 }
+
   
   /* === 321px até 376px === */
   @media screen and (min-width: 321px) and (max-width: 376px) {
@@ -97,9 +98,9 @@
 /* === 768px até 991px (Tablet) === */
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .tituloServicos {
-    font-size: 45px;
-    max-width: 500px;
-    margin: 140px auto 0;
+    font-size: 42px;
+    max-width: 700px;
+    margin: 100px auto 0;
     text-align: center;
   }
 
@@ -126,10 +127,10 @@
 }
 
 @media screen and (min-width: 992px) and (max-width: 1000px){
-  .tituloServicos {
-    font-size: 45px;
-    max-width: 500px;
-    margin: 140px auto 0;
+ .tituloServicos {
+    font-size: 42px;
+    max-width: 700px;
+    margin: 100px auto 0;
     text-align: center;
   }
 
@@ -159,7 +160,7 @@
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
     .tituloServicos {
       font-size: 46px;
-      margin-top: 200px;
+      margin-top: 130px;
     }
   
     #containerServicos {
@@ -171,6 +172,7 @@
     }
   
     .cardservico {
+      margin-top: 50px;
       width: 400px;
       height: 280px;
     }
@@ -181,6 +183,11 @@
 
     .cardservico h3 {
       font-size: 1.3rem;
+    }
+
+    .subtextServico {
+      font-size: 1.4rem;
+      max-width: 900px;
     }
   }
   
@@ -200,16 +207,20 @@
   
     .cardservico {
       margin-top: 20px;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       width: 445px;
-      height: 300px;
+      height: 290px;
     }
+
+     .cardservico p {
+        font-size: 1.2rem;
+     }
   }
   
   /* === min-width 1920px === */
   @media screen and (min-width: 1920px) {
     .tituloServicos {
-      font-size: 48px;
+      font-size: 3.5rem;;
     }
   
     #containerServicos {
@@ -223,15 +234,15 @@
   
     .cardservico {
       width: 460px;
-      height: 240px;
+      height: 300px;
     }
 
     .cardservico p {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
     }
 
     .cardservico h3 {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
     }
   }
   
