--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -13,15 +13,6 @@
     flex-wrap: wrap; 
 }
 
-.cardLinha .cardInfo-maior {
-  flex: 1 1 100%;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  width: calc(100% - 60px); /* 60px = 2 gaps de 30px */
-  max-width: none;
-}
-
 .cardInfo-menor {
     width: 430px;
     height: 280px;
@@ -77,6 +68,7 @@
 }
 
 .cardicon p {
+  font-size: 0.95rem;
   color: rgba(255, 255, 255, 0.75);
   line-height: 1.5;
   margin: 0;
@@ -85,6 +77,8 @@
 
 
 .cardInfo-maior {
+    width: 890px;
+    height: 250px;
     background: rgba(255, 255, 255, 0.03);
     border: 1px solid rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(10px);
@@ -92,9 +86,10 @@
 }
 
 .cardicon p strong {
-  color: #3fa6f0; /* azul elegante, você pode ajustar se quiser outro tom */
+  color: #3fa6f0;
   font-weight: 500;
 }
+
 
 /* RESPONSIVIDADE*/
 @media screen and (max-width: 376px) {
@@ -122,7 +117,7 @@
 @media screen and (min-width: 377px) and (max-width: 480px) {
     .cardInfo-menor,
     .cardInfo-maior {
-        width: 80vw !important;
+        width: 80vw; 
         height: auto;
         padding: 2.5rem;
     }
@@ -138,7 +133,7 @@
     } 
 
     #cardsSobre {
-        margin-top: -120px; 
+        margin-top: -100px; 
         gap: 50px; 
     }
 
@@ -151,83 +146,92 @@
 
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
+    .cardInfo-menor,
+    .cardInfo-maior {
+        width: 85%; 
+        height: auto;
+        padding: 3rem 3rem;
+        font-size: 1.4rem;
+    }
 
-  .cardInfo-menor,
-  .cardLinha .cardInfo-maior {
-      width: 650px !important;
-      max-width: 85vw;
-      height: auto;
-      padding: 2.5rem;
-      font-size: 1.2rem;
-  }
+    .cardInfo-menor p,
+    .cardInfo-maior p{
+        font-size: 1.4rem;
+    } 
 
-  .cardInfo-menor p,
-  .cardInfo-maior p {
-      font-size: 1.3rem;
-  }
+    .cardInfo-menor h3,
+    .cardInfo-maior h3{
+        font-size: 1.4rem;
+    } 
 
-  .cardInfo-menor h3,
-  .cardInfo-maior h3 {
-      font-size: 1.4rem;
-  }
+    #cardsSobre {
+        margin-top: -280px;
+        gap: 50px;
+    }
 
-  #cardsSobre {
-      width: 100%;
-      margin-top: -160px;
-      gap: 50px;
-  }
+    .cardLinha {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
 
-  .cardLinha {
-      flex-direction: column;
-      align-items: center;
-      gap: 50px;
-  }
+    .icon-eye::before {
+        content: "";
+        position: absolute;
+        top: 0;  
+        left: 30px;
+        width: 75px; 
+        height: 3px; 
+        background-color: #4480C4; 
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+    }
 
-  .icon-eye::before {
-      left: 30px;
-      width: 75px;
-      height: 3px;
-  }
 }
 
  @media screen and (min-width: 992px) and (max-width: 1000px) {
      .cardInfo-menor,
-  .cardLinha .cardInfo-maior {
-      width: 650px !important;
-      max-width: 85vw;
-      height: auto;
-      padding: 2.5rem;
-      font-size: 1.2rem;
-  }
+    .cardInfo-maior {
+        width: 85%; 
+        height: auto;
+        padding: 3rem 3rem;
+        font-size: 1.4rem;
+    }
 
-  .cardInfo-menor p,
-  .cardInfo-maior p {
-      font-size: 1.3rem;
-  }
+    .cardInfo-menor p,
+    .cardInfo-maior p{
+        font-size: 1.4rem;
+    } 
 
-  .cardInfo-menor h3,
-  .cardInfo-maior h3 {
-      font-size: 1.4rem;
-  }
+    .cardInfo-menor h3,
+    .cardInfo-maior h3{
+        font-size: 1.4rem;
+    } 
 
-  #cardsSobre {
-      width: 100%;
-      margin-top: -160px;
-      gap: 50px;
-  }
+    #cardsSobre {
+        margin-top: -280px;
+        gap: 50px;
+    }
 
-  .cardLinha {
-      flex-direction: column;
-      align-items: center;
-      gap: 50px;
-  }
+    .cardLinha {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
 
-  .icon-eye::before {
-      left: 30px;
-      width: 75px;
-      height: 3px;
-  }
+    .icon-eye::before {
+        content: "";
+        position: absolute;
+        top: 0;  
+        left: 30px;
+        width: 75px; 
+        height: 3px; 
+        background-color: #4480C4; 
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+    }
  }
+
 
 @media screen and (min-width: 1200px) and (max-width: 1599px) {
     #cardsSobre {
@@ -245,18 +249,15 @@
         flex-wrap: wrap; 
     }
     
-      .cardInfo-menor {
+    .cardInfo-menor {
+        padding: 2.5rem;
         width: 400px;
         height: 370px;
-        padding: 2.5rem;
     }
-
-    .cardLinha .cardInfo-maior {
-        max-width: calc(3 * 400px + 2 * 30px); /* = 1290px */
-    }
-
+    
     .cardInfo-maior {
-        height: 285px;
+        width: 840px;
+        height: 370px;
     }
 
     .cardInfo-menor p,
@@ -284,51 +285,41 @@
   }
   
 
-@media screen and (min-width: 1600px) and (max-width: 1919px) {
+@media screen and (min-width: 1600px) and (max-width: 1919px){
 #cardsSobre {
-    margin-top: -80px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    font-size: 1.2rem;
 }
 
 .cardLinha {
     display: flex;
     justify-content: center;
-    gap: 40px;
+    gap: 40px; 
     flex-wrap: wrap;
 }
 
-  .cardInfo-menor {
-    width: 450px;
-    height: 360px;
-  }
-
-  .cardLinha .cardInfo-maior {
-    max-width: calc(3 * 450px + 2 * 30px); 
-  }
-
-  .cardInfo-maior {
-        height: 275px;
-    }
-
-
+.cardInfo-menor {
+    font-size: 1.2rem;
+    width: 500px;  
+    height: 340px;
 }
 
+.cardInfo-menor p, .cardInfo-maior p {
+    font-size: 1.2rem;
+}
+
+.cardInfo-maior {
+    font-size: 1.4rem;
+    width: 1020px;  
+    height: 340px;
+}
+}
 
 @media screen and (min-width: 1920px) {
-  .cardInfo-menor {
-    width: 460px;
-    height: 370px;
-  }
-
-  .cardLinha .cardInfo-maior {
-    max-width: calc(3 * 460px + 2 * 50px); /* = 1440px */
-  }
-
-   #cardsSobre {
+  #cardsSobre {
     margin-top: -140px;
     display: flex;
     flex-direction: column;
@@ -343,18 +334,23 @@
     flex-wrap: wrap;
   }
 
+  .cardInfo-menor {
+    width: 460px;    /* Aumenta proporcionalmente */
+    height: 390px;
+  }
+
+  .cardInfo-maior {
+    width: 990px;   /* Maior para preencher bem a linha */
+    height: 390px;
+  }
+
   .cardInfo-menor p,
   .cardInfo-maior p{
-      font-size: 1.3rem;
+      font-size: 1.4rem;
   } 
 
   .cardInfo-menor h3,
   .cardInfo-maior h3{
-      font-size: 1.3rem;
+      font-size: 1.4rem;
   } 
-
-  .cardInfo-maior {
-        height: 285px;
-    }
 }
-
